# apexplane-guidelines

./: .dockerignore  .gitignore  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
apg/: __init__.py  manifest.py  manifest.schema.yaml  module_sync.py
tests/: test_manifest.py  test_module_sync.py  test_public_cli.py
